# gif_compressor_backend

./: Cargo.toml
src/: main.rs
src/api/: check_session.rs  compress_gif.rs  compress_result_download.rs  mod.rs
src/component/: compress.rs  mod.rs  payload_save.rs  session_cleanup_task.rs  session_manager_task.rs
src/state/: mod.rs  state.rs
