[package]
name = "gif-compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.3.1"
chrono = "0.4.26"
futures-util = "0.3.28"
image = "0.24.6"
mime = "0.3.17"
serde_json = "1.0.104"
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }
